== Version 2.0.19 Work in progress (not released -- this is a draft) ==

  User side :
  -----------
    # Apps:
        * Projects :
            - The field 'Project.effective_end_date' cannot be inner-edited anymore (use the button 'Close the project').


== Version 2.0.18 ==

  User side :
  -----------
    # Apps:
        * Billing :
            - The LateX templates have been fixed : the settlement terms is now used correctly.
            - In the block "Payments information", the button to select an account is always displayed when no account is selected.
        * SMS :
            - Many fixes & improvements have been done.


== Version 2.0.17 ==

  UPGRADE NOTE :
    - You should upgrade the version of Pillow to 7.1 (eg: pip install -U creme/requirements.txt ).
    - You should re-generate the media files (python manage.py generatemedia).

  Users side :
  ------------
    # A XSS issue in popover title has been fixed.
    # An issue with escaped characters in dialog title has been fixed.
    # An issue when removing a file with inner edition has been fixed (backported from 2.1)
    # Apps:
        * Billing :
            - When a billing document is created/edited, & the source has exactly one PaymentInformation, this one is automatically linked to the document.
            - When a PaymentInformation is created from a billing document, it is automatically linked to the document.
            - The LateX templates have been fixed :
                - The issuing date is now displayed.
                - In Invoices, the settlement terms set in the entity is now used instead of hard-coded label.
                - The display of the total (exclusive of tax) for lines has now 2 decimal places.

  Developers side :
  -----------------
    Non breaking changes :
    ----------------------
        # In JavaScript :
          - The property "title" of 'creme.dialog.Dialog' is now unescaped (issue #64 in trunk).


== Version 2.0.16 ==

  Users side :
  ------------